--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
+
+[dev-dependencies]
+mockito = "0.27.0"
