--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,17 @@ version = "0.1.0"
 authors = ["PotHix <pothix@pothix.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["lib", "cdylib"]
+
 [dependencies]
 reqwest = { version = "0.10", features = ["json", "blocking"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_derive = "1.0"
 serde_json = "1.0"
 structopt = "0.3"
 
 [dev-dependencies]
 mockito = "0.27.0"
+
+[profile.release]
+opt-level = "s"
