--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,9 @@ structopt = "0.3"
 mockito = "0.27.0"
 
 [profile.release]
-opt-level = "s"
+# optimizing for binary size here
+# for more info: https://github.com/johnthagen/min-sized-rust
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = 'abort'
